src/test/ui/infinite/infinite-tag-type-recursion.stderr
error[E0072]: recursive type `MList` has infinite size
  --> $DIR/infinite-tag-type-recursion.rs:1:1
   |
LL | enum MList { Cons(isize, MList), Nil }
   | ^^^^^^^^^^               ----- recursive without indirection
   | |
   | recursive type has infinite size
   |
help: insert some indirection (e.g., a `Box`, `Rc`, or `&`) to make `MList` representable
   |
LL | enum MList { Cons(isize, Box<MList>), Nil }
   |                          ++++     +

error: aborting due to previous error

For more information about this error, try `rustc --explain E0072`.
